<resources>
    <string name="app_name">XPLORA</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_login">Sign in</string>


    <string name="loading">加载中</string>
    <string name="error_mobile_invalid">请输入正确手机号码</string>
    <string name="error_code_invalid">请输入6位数字验证码</string>

    <string name="setup_profile">点此编辑个人资料</string>

    <string name="tip_select_city">请选择您所在城市</string>
    <string name="tip_select_hobby">请选择兴趣标签</string>

    <string name="tab_title_city">城市</string>
    <string name="tab_title_tag">标签</string>
    <string name="tab_title_friend">朋友</string>

    <string name="tip_explore_people">寻找志同道合之人</string>
    <string name="tip_follow_trendsetter">关注城市潮人</string>
    <string name="tip_follow_friend">关注同道中人</string>
    <string name="link_more_trendsetter">更多潮人</string>
    <string name="tip_follow_all">全部关注</string>
    <string name="confirm">确定</string>
    <string name="next_step">下一步</string>

    <string name="title_setting">设置</string>
    <string name="setting_image_title">头像</string>
    <string name="setting_account">账号信息</string>
    <string name="setting_push">推送开关</string>
    <string name="setting_about_xplora">关于XPLORA</string>
    <string name="setting_terms">相关协议</string>
    <string name="setting_order_term">注册及交易协议</string>
    <string name="setting_check_update">检查更新</string>

    <string name="setting_tip_username">请编辑您的昵称</string>
    <string name="setting_tip_mobile">请编辑您的手机号码</string>
    <string name="setting_tip_hobby">请选择兴趣标签</string>
    <string name="setting_tip_city">请选择所在城市</string>

    <string name="title_edit_username">编辑昵称</string>
    <string name="title_edit_mobile">绑定手机号码</string>
    <string name="title_edit_hobby">修改兴趣标签</string>
    <string name="title_edit_city">修改所在城市</string>

    <string name="tip_smscode">输入验证码</string>
    <string name="tip_mobile">输入手机号码</string>
    <string name="fetch_smscode">获取</string>
    <string name="retry_fetch">重新获取</string>
    <string name="btn_login">登入</string>
    <string name="tip_sns_login">您亦可以</string>

    <string name="tip_upload_failed">抱歉，上传失败，请稍候再试</string>
    <string name="tip_upload_loading">正在上传中</string>


    <string name="no_more_trendsetter">暂时没有可关注的潮人</string>
    <string name="cancelBtn">取消</string>
    <string name="okBtn">确定</string>
    <string name="title_start_event">活在</string>

    <string name="need_signin">请登录再进行此操作</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_new_user_guide">NewUserGuideActivity</string>
</resources>
