<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <TextView
        android:id="@+id/tip_follow_trendsetter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/xplora_blue"
        android:textSize="14sp"
        android:text="@string/tip_follow_trendsetter"
        />
            <TextView
                android:visibility="gone"
                android:id="@+id/tv_no_more_trendsetter"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:text="@string/no_more_trendsetter"
                android:textSize="14sp"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:layout_below="@id/tip_follow_trendsetter"
                android:textColor="@color/white"
                />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/id_recyclerview_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_no_more_trendsetter"
        android:layout_marginTop="10dp"
        android:scrollbars="none" />


    <View
        android:id="@+id/seperate_line"
        android:layout_below="@id/id_recyclerview_horizontal"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/xplora_blue"></View>

            <RelativeLayout
                android:id="@+id/tip_follow_friend_panel"
                android:layout_below="@id/seperate_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tip_follow_friend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="20dp"
                    android:textColor="@color/xplora_blue"
                    android:textSize="14sp"
                    android:text="@string/tip_follow_friend"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:text="@string/tip_follow_all"
                    android:textColor="#00FFFF"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp"
                    android:textSize="14sp"
                    android:background="@drawable/bg_action_btn"
                    />
            </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/id_recyclerview_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tip_follow_friend_panel"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="80dp"
        android:scrollbars="none" />
            <TextView
                android:visibility="gone"
                android:id="@+id/tv_no_more_user"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:text="@string/no_more_trendsetter"
                android:textSize="14sp"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:layout_below="@id/id_recyclerview_vertical"
                android:textColor="@color/white"
                />
        </RelativeLayout>

    </ScrollView>
    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="@drawable/new_user_guide_bottom_bg"
        >
        <TextView
            android:id="@+id/tip_explore_people"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_gravity="center_vertical"
            android:gravity="left"
            android:textSize="14sp"
            android:textColor="#00FFFF"
            android:text="@string/tip_explore_people"
            android:paddingLeft="10dp"
            />
        <Button
            android:id="@+id/btn_explore_confirm"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:text="@string/next_step"
            android:layout_gravity="center_vertical"
            android:textColor="#00FFFF"
            android:layout_marginRight="10dp"
            android:textSize="14sp"
            android:background="@drawable/bg_action_btn"
            />
    </LinearLayout>


</RelativeLayout>