<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_color"
    >

    <include layout="@layout/frag_title" />
    <ImageView
        android:id="@+id/setting_flag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/setting_flag"
        android:layout_alignParentTop="true"
        android:scaleType="fitXY"
        android:layout_marginTop="60dp"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/setting_flag"
        android:scrollbars="none"
        >
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <com.github.siyamed.shapeimageview.CircularImageView
                android:id="@+id/setting_image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:adjustViewBounds="true"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="20dp"
                app:siBorderWidth="1dp"
                app:siBorderColor="@color/darkgray"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:scaleType="fitXY"/>


            <TextView
                android:id="@+id/setting_account"
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:gravity="left"
                android:text="@string/setting_account"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/setting_image"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                ></TextView>
            <LinearLayout
                android:id="@+id/setting_account_panel"
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:background="@drawable/background_setting"
                android:orientation="vertical"
                android:layout_below="@id/setting_account"
                android:layout_centerHorizontal="true"
                >
                <RelativeLayout
                    android:id="@+id/setting_username_panel"
                    android:layout_width="290dp"
                    android:layout_height="45dp">
                    <View
                        android:id="@+id/setting_username_border"
                        android:layout_width="290dp"
                        android:layout_height="1dp"
                        android:background="@color/xplora_blue"
                        android:layout_alignParentBottom="true"
                        />
                    <ImageView
                        android:id="@+id/icon_username"
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icon_username"
                        android:layout_above="@id/setting_username_border"
                        android:layout_alignParentLeft="true"
                        android:layout_marginBottom="10dp"
                        />
                    <ImageView
                        android:id="@+id/icon_edit_username"
                        android:layout_width="15dp"
                        android:layout_height="20dp"
                        android:src="@drawable/icon_editable"
                        android:layout_above="@id/setting_username_border"
                        android:layout_alignParentRight="true"
                        android:layout_marginBottom="10dp"
                        android:layout_marginRight="5dp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_above="@id/setting_username_border"
                        android:layout_toRightOf="@id/icon_username"
                        android:text="@string/setting_tip_username"
                        android:textColor="@color/light_gray"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="5dp"
                        />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/setting_mobile_panel"
                    android:layout_width="290dp"
                    android:layout_height="45dp">
                    <View
                        android:id="@+id/setting_mobile_border"
                        android:layout_width="290dp"
                        android:layout_height="1dp"
                        android:background="@color/xplora_blue"
                        android:layout_alignParentBottom="true"
                        />
                    <ImageView
                        android:id="@+id/icon_mobile"
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icon_mobile"
                        android:layout_above="@id/setting_mobile_border"
                        android:layout_alignParentLeft="true"
                        android:layout_marginBottom="10dp"
                        />
                    <ImageView
                        android:id="@+id/icon_edit_mobile"
                        android:layout_width="15dp"
                        android:layout_height="20dp"
                        android:src="@drawable/icon_editable"
                        android:layout_above="@id/setting_mobile_border"
                        android:layout_alignParentRight="true"
                        android:layout_marginBottom="10dp"
                        android:layout_marginRight="5dp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_above="@id/setting_mobile_border"
                        android:layout_toRightOf="@id/icon_mobile"
                        android:text="@string/setting_tip_mobile"
                        android:textColor="@color/light_gray"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="5dp"
                        />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/setting_hobby_panel"
                    android:layout_width="290dp"
                    android:layout_height="45dp">
                    <View
                        android:id="@+id/setting_hobby_border"
                        android:layout_width="290dp"
                        android:layout_height="1dp"
                        android:background="@color/xplora_blue"
                        android:layout_alignParentBottom="true"
                        />
                    <ImageView
                        android:id="@+id/icon_hobby"
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icon_hobby"
                        android:layout_above="@id/setting_hobby_border"
                        android:layout_alignParentLeft="true"
                        android:layout_marginBottom="10dp"
                        />
                    <ImageView
                        android:id="@+id/icon_edit_hobby"
                        android:layout_width="15dp"
                        android:layout_height="20dp"
                        android:src="@drawable/icon_editable"
                        android:layout_above="@id/setting_hobby_border"
                        android:layout_alignParentRight="true"
                        android:layout_marginBottom="10dp"
                        android:layout_marginRight="5dp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_above="@id/setting_hobby_border"
                        android:layout_toRightOf="@id/icon_hobby"
                        android:text="@string/setting_tip_hobby"
                        android:textColor="@color/light_gray"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="5dp"
                        />
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/setting_city_panel"
                    android:layout_width="290dp"
                    android:layout_height="45dp">
                    <View
                        android:id="@+id/setting_city_border"
                        android:layout_width="290dp"
                        android:layout_height="1dp"
                        android:background="@color/xplora_blue"
                        android:layout_alignParentBottom="true"
                        />
                    <ImageView
                        android:id="@+id/icon_city"
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icon_pin"
                        android:layout_above="@id/setting_city_border"
                        android:layout_alignParentLeft="true"
                        android:layout_marginBottom="10dp"
                        />
                    <ImageView
                        android:id="@+id/icon_edit_city"
                        android:layout_width="15dp"
                        android:layout_height="20dp"
                        android:src="@drawable/icon_editable"
                        android:layout_above="@id/setting_city_border"
                        android:layout_alignParentRight="true"
                        android:layout_marginBottom="10dp"
                        android:layout_marginRight="5dp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_above="@id/setting_city_border"
                        android:layout_toRightOf="@id/icon_city"
                        android:text="@string/setting_tip_city"
                        android:textColor="@color/light_gray"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="5dp"
                        />
                </RelativeLayout>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/setting_push_panel"
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:background="@drawable/background_setting"
                android:layout_below="@id/setting_account_panel"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:text="@string/setting_push"
                    android:layout_alignParentLeft="true"
                    android:padding="10dp"
                    />
                <ToggleButton
                    android:layout_width="50dp"
                    android:layout_height="15dp"
                    android:background="@drawable/toogle_push"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="10dp"
                    android:textOff=""
                    android:textOn=""
                    />
            </RelativeLayout>

            <TextView
                android:id="@+id/setting_about_xplora"
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:gravity="left"
                android:text="@string/setting_about_xplora"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/setting_push_panel"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                ></TextView>

            <RelativeLayout
                android:id="@+id/setting_version_panel"
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:background="@drawable/background_setting"
                android:layout_below="@id/setting_about_xplora"
                android:layout_centerHorizontal="true"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:text="版本1.0"
                    android:layout_alignParentLeft="true"
                    android:padding="10dp"
                    />
                <Button
                    android:layout_width="60dp"
                    android:layout_height="20dp"
                    android:background="@drawable/setting_checkupdate_btn_bg"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="10dp"
                    android:textColor="@color/black"
                    android:text="@string/setting_check_update"
                    android:textSize="12sp"
                    />
            </RelativeLayout>

            <TextView
                android:id="@+id/setting_terms"
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:gravity="left"
                android:text="@string/setting_terms"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/setting_version_panel"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                ></TextView>

            <RelativeLayout
                android:id="@+id/setting_terms_panel"
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:background="@drawable/background_setting"
                android:layout_below="@id/setting_terms"
                android:layout_marginBottom="60dp"
                android:layout_centerHorizontal="true"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:text="@string/setting_order_term"
                    android:layout_alignParentLeft="true"
                    android:padding="10dp"
                    />
                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="20dp"
                    android:src="@drawable/icon_editable"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="10dp"
                    />
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>